log
Wed 27 Sep 2023 09:47:54 PM UTC: 
 heap.c | 27 +++++++++++----------------
 1 file changed, 11 insertions(+), 16 deletions(-)
 tests:  0|4
total_score: 0/70
2ebf384
Wed 27 Sep 2023 09:48:39 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
cc24d97
Wed 27 Sep 2023 09:53:52 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
af878c1
Wed 27 Sep 2023 09:55:37 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:20:3: error: cannot convert to a pointer type
   20 |   return ((heapElem*)pq->heapArray[0])->data;
      |   ^~~~~~
Compilation failed
fa1c95f
Wed 27 Sep 2023 10:03:01 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
38c9879
Wed 27 Sep 2023 10:04:35 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|2
total_score: 20/70
eac0137
Wed 27 Sep 2023 10:43:55 PM UTC: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:36:20: error: incompatible types when initializing type ‘heapElem *’ {aka ‘struct nodo *’} using type ‘heapElem’ {aka ‘struct nodo’}
   36 |   heapElem* temp = pq->heapArray[pq->size - 1];
      |                    ^~
heap.c:36:13: error: unused variable ‘temp’ [-Werror=unused-variable]
   36 |   heapElem* temp = pq->heapArray[pq->size - 1];
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
5903567
Wed 27 Sep 2023 10:44:23 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:36:12: error: unused variable ‘temp’ [-Werror=unused-variable]
   36 |   heapElem temp = pq->heapArray[pq->size - 1];
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
d9ada56
Wed 27 Sep 2023 10:45:15 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|2
total_score: 20/70
45ec61a
Wed 27 Sep 2023 10:45:49 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
2456f59
